--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,27 @@
     margin-top: 20px;
 }
 
+h3 {
+    font-style: italic;
+    color: #333;
+}
+
 .spacing {
     margin: auto;
 }
+
+.pic {
+    padding: 10px;
+    margin:  10px;
+}
+
+.logo {
+    height:            100px;
+    background:  transparent;
+    -webkit-animation: spin 20s linear infinite;
+    -moz-animation:    spin 20s linear infinite;
+    animation:         spin 20s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
